Fix messages autoscroll and replace shift+enter for ctrl+enter to submit message.

--- a/pages/explorer/[chat]/[owner]/chat.module.css
+++ b/pages/explorer/[chat]/[owner]/chat.module.css
@@ -23,7 +23,7 @@
   scroll-behavior: smooth;
 }
 
-.messagesContainer > .messageContainer {
+.messagesContainer > :last-child {
   scroll-snap-align: start;
 }
 
